# github-copilot-ralph-starter-kit

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.copilot/skills/grill-me/: SKILL.md
.copilot/skills/intake/: SKILL.md
.copilot/skills/prd-to-issues/: SKILL.md
.copilot/skills/release/: SKILL.md
.copilot/skills/review/: SKILL.md
.copilot/skills/setup-agent-skills/: SKILL.md  triage-labels.md
.copilot/skills/triage/: SKILL.md
.copilot/skills/write-prd/: SKILL.md
docs/: concepts.md  customization.md  runners.md  workflow.md
docs/adr/: 0001-observer-control-model-for-interactive-runner.md  0010-local-sandbox-per-iteration.md
docs/agents/: triage-labels.md
ralph/: __init__.py  _runner.py  afk.py  afk.sh  grill.py  once.sh  prompt.md  py-afk.sh  ralph-afk.sh  ralph-once.sh  sh-afk.sh
ralph/python/: README.md  pyproject.toml
ralph/python/ralph_afk/: cli.py  config.py  events.py  gh.py  git.py  loop.py  persist.py  pricing.py  pricing.toml  session.py  sources.py  usage.py  wrapper.py
ralph/python/ralph_afk/interactive/: __init__.py  app.py  detect.py  driver.py  models.py  picker.py  picker_app.py  state.py
ralph/python/ralph_afk/telemetry/: __init__.py  otel.py
ralph/python/ralph_afk/ui/: __init__.py  console.py  renderer.py  summary.py
ralph/python/tests/: fakes.py  test_cli_interactive.py  test_cli_reasoning_effort.py  test_close_keyword_parity.py  test_config.py  test_events.py  test_fakes.py  test_gh.py  test_git.py  test_include_prs.py  test_interactive_app.py  test_interactive_detect.py  test_interactive_driver.py  test_interactive_ledger.py  test_interactive_models.py  test_interactive_picker.py  test_interactive_picker_app.py  test_interactive_state.py  test_iteration_end_to_end.py  test_loop_interactive.py  test_loop_parallel.py  test_no_forbidden_api_libs.py  test_persist.py  test_pricing.py  test_smoke.py  test_sources.py  test_telemetry_otel.py  test_ui_smoke.py  test_usage.py  test_wrapper.py
templates/: AGENTS.template.md  SPEC.template.md
