[project]
name = "ralph-afk"
version = "0.0.1"
description = "Autonomous AFK loop on the GitHub Copilot Python SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "github-copilot-ralph-starter-kit contributors" }]
keywords = ["github-copilot", "afk", "autonomous", "agent", "ralph"]

# Runtime deps. The SDK is pinned to an exact PyPI version: the upstream
# `github-copilot-sdk` is documented as "public preview" and "may change in
# breaking ways" (see PRD #1, "Further Notes"), so future slices should bump
# this pin deliberately rather than tracking `main`.
#
# Pinned to 1.0.2, the latest stable release of the 1.0.x line. History: the
# bundled Copilot CLI advanced to a protocol the 0.3.0 SDK could no longer
# drive (it hung waiting for `session.idle` and rejected the `list_models`
# billing payload); 1.0.0b9 was the first release that both spoke the live
# protocol and exposed the `claude-opus-4.8` model the AFK loop targets. The
# 1.0.0 line has since graduated from beta (1.0.0 -> 1.0.1 -> 1.0.2), and the
# b9 -> 1.0.2 bump was validated by a symbol+signature contract check against
# every SDK surface the runner touches (CopilotClient/CopilotSession
# construction, `create_session`/`send_and_wait` signatures, the
# `PermissionDecision*` rpc types + `PermissionRequestResult`, and the
# `SessionEventType` members `events.py` maps) plus the full test suite.
# Because the SDK still changes the permission-request and
# client-construction surfaces in breaking ways across versions, treat any
# further bump as a deliberate, tested migration rather than a routine
# version float: re-run that contract check before pinning forward.
#
# Rich is the renderer for the Python variant's terminal experience
# (streaming prints + frozen iteration Panels + a frozen run-end Table).
dependencies = [
    "github-copilot-sdk==1.0.2",
    "rich>=13.7.0,<14",
]

[project.optional-dependencies]
# Optional OpenTelemetry export. Off by default so the base install stays
# light. Operators who run an OTel collector flip it on by either setting
# OTEL_EXPORTER_OTLP_ENDPOINT or RALPH_OTEL_ENABLED=1 — see issue #12.
otel = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp>=1.20,<2",
]

# Optional interactive TUI (issue #23, ADR-0001). Off by default so the base
# install stays a pure line-printer with no curses/async-screen dependency.
# Operators who want the live dashboard install `.[tui]`.
#
# Textual is pinned BELOW 6 on purpose: Textual 6.x bumps its own floor to
# `rich>=14`, which would collide with this kit's `rich>=13.7,<14` pin (the
# line-printer Renderer is built against the Rich 13 API). Every Textual 5.x /
# late-0.8x release still depends on `rich>=13.3`, so the `<6` ceiling keeps
# the interactive extra installable alongside the base Rich pin. Treat any bump
# to `>=6` as a deliberate migration that also moves the `rich` pin.
tui = [
    "textual>=0.86,<6",
]

# Development tooling. Exposed as an extra (not a PEP 735 dependency-group) so
# it can be installed with `uv pip install -e ".[dev]"` / `pip install -e ".[dev]"`.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.2,<0.0.25",
    "httpx>=0.24.0",
]

[project.scripts]
ralph-afk = "ralph_afk.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph_afk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
